# torch-rechub

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_en.md  README_zh.md  SUPPORT.md  contributing.html  generate_visualizations.py  hashmap.json  index.html  introduction.html  mkdocs.yml  model_list.md  objects.inv  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  setup.py  sitemap.xml  test_hstu_imports.py
.github/: FUNDING.yml  RELEASE_TEMPLATE.md  dependabot.yml  labeler.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  help_wanted.md
.github/workflows/: api-docs.yml  ci.yml  deploy.yml  labeler.yml
api/: api.html
api-reference/basic/: index.html
api-reference/models/: index.html
api-reference/trainers/: index.html
api-reference/utils/: index.html
assets/: api_api.md.--lrhSk_.js  api_api.md.--lrhSk_.lean.js  api_api.md.A-66VmfZ.js  api_api.md.BJpdh2BI.lean.js  api_api.md.CDsovuf1.js  api_api.md.CDsovuf1.lean.js  api_api.md.Cq0YQGCW.js  api_api.md.Cq0YQGCW.lean.js  api_api.md.D6DHnQyz.js  api_api.md.DJkjBqY1.lean.js  api_api.md.c24R_kUC.js  api_api.md.c24R_kUC.lean.js  api_api.md.oAT_vLkv.js  api_api.md.oAT_vLkv.lean.js  api_api.md.oGttvwIc.js  api_api.md.oGttvwIc.lean.js  app.B4gpppom.js  app.BL34LFa0.js  app.BL3zH2Ij.js  app.BQNuPZg1.js  app.BVpU5KzN.js  app.BWETvVpN.js  app.BZnlXBsY.js  app.BaoZXkb1.js  app.BdUPQZim.js  app.BfS5OTDA.js  app.Bq8XgoTX.js  app.BvzHFIKv.js  app.C3gC3tXb.js  app.CNpm7El-.js  app.CXp7NAuT.js  app.CXyeMGsY.js  app.CfwSSSUe.js  app.Cl4dIiyY.js  app.Cs7Asha2.js  app.CtCE54ez.js  app.CutAoDM9.js  app.DDYJooeT.js  app.DQdBMfmN.js  app.DTjipqXh.js  (+1260 more)
assets/chunks/: @localSearchIndexroot.-T2MmHYA.js  @localSearchIndexroot.B1FDRpLw.js  @localSearchIndexroot.B4eD0-M_.js  @localSearchIndexroot.BOPmmbF9.js  @localSearchIndexroot.BP_x_8t-.js  @localSearchIndexroot.BQmVFwwO.js  @localSearchIndexroot.Baxsr3Se.js  @localSearchIndexroot.BbbNUhF9.js  @localSearchIndexroot.BdKIJ0EQ.js  @localSearchIndexroot.BeWF0JW-.js  @localSearchIndexroot.BhXliKZP.js  @localSearchIndexroot.BjWJLYUK.js  @localSearchIndexroot.BkAawdxC.js  @localSearchIndexroot.BlXH-Bit.js  @localSearchIndexroot.CHBkdfx7.js  @localSearchIndexroot.CHKUGZso.js  @localSearchIndexroot.CNqYS1pn.js  @localSearchIndexroot.COdwJutX.js  @localSearchIndexroot.CbcOrZgm.js  @localSearchIndexroot.CkAbiNm9.js  @localSearchIndexroot.CmlyApA3.js  @localSearchIndexroot.D-2lbyS2.js  @localSearchIndexroot.D38im_gX.js  @localSearchIndexroot.D3WaWyIB.js  @localSearchIndexroot.D45fqk10.js  @localSearchIndexroot.D8SG_7r-.js  @localSearchIndexroot.DEGJnThk.js  @localSearchIndexroot.DUNoTvT6.js  @localSearchIndexroot.D_y1X0OM.js  @localSearchIndexroot.DbGkkcO0.js  @localSearchIndexroot.DhRNcorS.js  @localSearchIndexroot.DpPyoq7X.js  @localSearchIndexroot.Dyzr8VQY.js  @localSearchIndexroot.FTwzjkHr.js  @localSearchIndexroot.IQPLf8Js.js  @localSearchIndexroot.McvvRaNb.js  @localSearchIndexroot.XvRGNvOq.js  @localSearchIndexroot.oo7a8Dvc.js  @localSearchIndexroot.x82x8Q2G.js  @localSearchIndexzh.1Vhvl-tp.js  (+126 more)
benchmarks/: BENCHMARK_DESIGN.md  README.md  __init__.py  baselines.py  datasets.py  metrics.py  models.py  report.py  runner.py  schema.py  suite.py
benchmarks/baselines/: matching.yaml  multitask.yaml  ranking.yaml
blog/: hllm_reproduction.html  match.html  rank.html  tiger_reproduction.html
blog/match/: index.html
blog/rank/: index.html
cache/: api-basic.html  api-models.html  api-trainers.html  api-utils.html  hllm_reproduction.html  hstu_reproduction.html  match.html  rank.html  参考资料.html
community/: changelog.html  contributing.html  faq.html
config/: .flake8  .pep8  .pre-commit-config.yaml  CONFIG_GUIDE.md  fix_encoding.py  format_code.py  generate_api_md.py  pytest.ini
contributing/: index.html
core/: data.html  evaluation.html  features.html  intro.html
docs/.vitepress/: config.mts
docs/cache/: api-basic.md  api-trainers.md  api-utils.md  match.md  参考资料.md
docs/css/: custom.css
docs/en/: contributing.md  examples.md  faq.md  getting-started.md  index.md  installation.md  introduction.md
docs/javascripts/: katex.min.js
docs/zh/: contributing.md  examples.md  faq.md  getting-started.md  index.md  installation.md  introduction.md
example/: amazon.py  criteo.py  run.py
examples/: README.md  amazon.py  criteo.py  index.html  run_aliexpress.py  run_amazon.py  run_amazon_electronics.py  run_census.py  run_criteo.py  run_metabalance.py  run_movielens.py
extra_js/: tablesort.min.js
faq/: index.html
getting-started/: index.html
guide/: install.html  intro.html  quick_start.html
installation/: index.html
introduction/: index.html
javascripts/: auto-render.min.js
manual/: faq.html  getting-started.html  installation.html
models/: generative.html  intro.html  matching.html  mtl.html  ranking.html
search/: search_index.json
serving/: demo.html  intro.html  onnx.html  vector_index.html
tests/: test_amazon_books_preprocess.py  test_arrow_array_to_tensor.py  test_basic.py  test_data_generator.py  test_e2e_matching.py  test_e2e_multitask.py  test_e2e_ranking.py  test_hllm_embedding_alignment.py  test_hstu_model.py  test_inbatch_sampling.py  test_mind_dynamic_interest.py  test_onnx_export.py  test_onnx_quantization.py  test_pa_array_to_tensor.py  test_parquet_dataset.py  test_regularization.py  test_serving.py  test_tiger_example.py
tools/: benchmark.html  callbacks.html  intro.html  tracking.html  visualization.html
torch_ctr/: activation.py  layers.py  learner.py  utils.py
torch_rechub/: __init__.py  types.py
tutorials/: 00_QuickStart_CTR_DeepFM.ipynb  01_Ranking_DIN.ipynb  02_Matching_DSSM.ipynb  03_MultiTask_MMOE.ipynb  04_Experiment_Tracking_Light.ipynb  05_Model_Export_and_Serving.ipynb  DIN.ipynb  DeepFM.ipynb  Matching.ipynb  Milvus.ipynb  Multi_Task.ipynb  ctr.html  intro.html  pipeline.html  retrieval.html
zh/: contributing.html  index.html  introduction.html
(+474 files in other folders)
